css/styles.css
html {
  box-sizing: border-box;
    /*background-color: #2A2F3D; #3A3F4F #B3B3B7  dark*/
    /*#30A6BC*/
    background-color: #2A2F3D;
  /*#58D4E1  blue*/
  /*#FC4757 red*/
  /*#CB9C80 brown*/
  /*EFF1F2 gray*/
  font-family: 'Economica', sans-serif;
}
*, *:before, *:after {
  box-sizing: inherit;
}

h1
{
	padding: 25px;	
	text-align: center;
	color:#EFF1F2;
	text-decoration: underline;
}

h3
{
	text-decoration: underline;
	margin-bottom: 0;
}

.filter-container
{
	font-size: 1.5em;
	color:#EFF1F2;
}

.filter-container select,
.filter-container input
{
	-webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
	padding:.5em;
	border: none;
	font-size: .75em;
	margin:.5em 0;
	border-radius: 5px;

}

.filter-container,
.result-container
{
	border-radius: 10px;
	background-color: #3A3F4F;
	text-align: center;

}

.content{
	margin:0 10%;
	height: 100%;
}

.event-container{
	width:75%;
	border-radius: 5px;
	display: inline-block;
	margin: 1%;
	background-position: center;
	background-color: #EFF1F2;
	opacity: .75;
	font-size: 1.25em;
	padding: 1em 0 1em 0;
}

.event-link{
	color:#3A3F4F;
}


.event-link{
	text-decoration: none;
}

.event-header{
	margin:0;
	font-size: 1.5em;
}
/*
.event-container{
	width:250px;
	height:250px;
	border-radius: 5px;
	display: inline-block;
	margin: 1%;
	background-position: center;
	opacity: .5;
	color:#fff;
}*/




#location-label, #proximity-label, #date-label, #submit-button
{
	margin:0px 5px 0px 25px;
}

#submit-button
{
	background-color: #B3B3B7;
}

.row
{
	margin: .75em 0;
	padding:15px 0;
}

.location-icon
{
	/*font-size: 3em;*/
}

.event-container:hover {
    opacity: 1;
    /*background-color: rgba(0,0,0,0.5);*/
}

.date-header
{
	color:#CB9C80;
	margin:1em 0 .25em 0;
}

.view-switch
{
	text-align: left;
	background-color: #3A3F4F;
	color:#2A2F3D;
	font-size:2em;
	padding-left: 1em;
	width:auto;
	border-radius: 10px 10px 0 0;
}

.map-view
{
	margin-left: .5em;
}

.artist-list li{
	list-style-type: none;
	display: inline-block;
	font-size: 1.5em;
}

.artist-list
{
	padding: 0;
	margin: 0 0 5px 0;
}

#loading{
	font-size: 3em;
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -24px 0 0 -27px;
    z-index: 999;
}

.current-location
{
	color:#FC4757;
}

.view-switch .map-view:hover
{
	color:#FC4757;
}

.view-switch .list-view:hover
{
	color:#58D4E1;
}

.map-container
{
	height:500px;
}

 #map 
 {
    height: 100%;
 }

 .error
 {
 	color:#FC4757;
 }

 .no-data
 {
 	font-size: 1.25em
 	color:#EFF1F2;
 }


.hidden{
	display: none;
}

